-
Bug
-
Resolution: Fixed
-
Major
-
Lustre 2.4.0
-
client: 2.3.0
server: http://review.whamcloud.com/#change,6252 patch set 5
client uses the t-f.sh from server
-
3
-
8116
This issue was created by maloo for sarah <sarah@whamcloud.com>
This issue relates to the following test suite run: http://maloo.whamcloud.com/test_sets/5584e96e-b5de-11e2-9d08-52540035b04c.
The sub-test test_7 failed with the following error:
Failure in replication; differences found.
Info required for matching: lustre-rsync-test 7
- is related to
-
LU-3190 Interop 2.3.0<->2.4 Failed on lustre-rsync-test test 3b: ASSERTION( lio->lis_lsm != ((void *)0) ) failed
-
- Resolved
-